--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,8 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/.idea/.idea.DiscourseExamples/.idea/encodings.xml
+/.idea/.idea.DiscourseExamples/.idea/indexLayout.xml
+/.idea/.idea.DiscourseExamples/.idea/vcs.xml
+/.idea/.idea.DiscourseExamples/.idea/projectSettingsUpdater.xml
+/.idea/.idea.DiscourseExamples/.idea/workspace.xml
